deploy/base/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-ops
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-controller
  name: node-controller
  namespace: kube-ops
spec:
  type: ClusterIP
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: metrics
    port: 8090
    protocol: TCP
    targetPort: 8090
  selector:
    app: node-controller
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-controller
  namespace: kube-ops
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-controller
  template:
    metadata:
      labels:
        app: node-controller
    spec:
      containers:
      - command:
        - /opt/app/controller
        image: node-controller:latest
        imagePullPolicy: IfNotPresent
        name: node-controller
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 300m
            memory: 512Mi
        volumeMounts:
        - name: node-controller-config
          mountPath: /opt/app/config/
        - name: webhook-tls
          mountPath: /tmp/k8s-webhook-server/serving-certs/
      imagePullSecrets:
      - name: hwhk-tecdo-registry
      # serviceAccount: node-controller
      serviceAccountName: node-controller
      tolerations:
      - effect: NoSchedule
        key: node
        value: system
      volumes:
      - name: node-controller-config
        configMap:
          name: node-controller-config
          defaultMode: 0777
      - name: webhook-tls
        secret:
          defaultMode: 420
          secretName: node-controller
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: node-controller
webhooks:
- name: node-controller.kube-ops.svc
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURLekNDQWhPZ0F3SUJBZ0lKQUtCTUhLd0NXeG5qTUEwR0NTcUdTSWIzRFFFQkN3VUFNQ3N4S1RBbkJnTlYKQkFNTUlHeHJaUzF1YjJSbExXTnZiblJ5YjJ4c1pYSXVhM1ZpWlMxdmNITXVjM1pqTUNBWERUSTBNVEV4TURFMgpNVGMwTjFvWUR6SXdOVEl3TXpJNE1UWXhOelEzV2pBck1Ta3dKd1lEVlFRRERDQnNhMlV0Ym05a1pTMWpiMjUwCmNtOXNiR1Z5TG10MVltVXRiM0J6TG5OMll6Q0NBU0l3RFFZSktvWklodmNOQVFFQkJRQURnZ0VQQURDQ0FRb0MKZ2dFQkFNRW9kQ1Y1ZENJWXYvMW9QVzZ6Y2NtdkdRSlFUZ1ZFbjV0UmY3cHNmbTZ1MTdQOGZkaUJFVE4xNDJhSApCc09zT1RyYU9keD [...]
    service:
      name: node-controller
      namespace: kube-ops
      port: 8443
      path: "/unschedule"
  rules:
  - operations: ["CREATE"]
    apiGroups: [""]
    apiVersions: ["v1"]
    resources: ["nodes"]
  failurePolicy: Ignore
  sideEffects: None
  admissionReviewVersions: ["v1", "v1beta1"]
